Update NPM and bower packages once a day.
And check if we should do this on every build.

--- a/_apptpl/package.json
+++ b/_apptpl/package.json
@@ -17,6 +17,8 @@
     "grunt-tasty-swig": "julianxhokaxhiu/grunt-tasty-swig",
     "grunt-webfont": "*",
     "grunt-yui-compressor": "*",
+    "grunt-periodic": "*",
+    "grunt-exec": "*",
     "load-grunt-tasks": "*"
   }
 }
