Use a relative path for output from now on

--- a/_apptpl/app.json
+++ b/_apptpl/app.json
@@ -1,7 +1,7 @@
 {
 	"config" : {
 		"output" : {
-			"path" : "../../../public_html"
+			"path" : "_release"
 		},
 		"livereload" : {
 			"port" : 35729,
