Make also typo3 extension output path relative.

--- a/_apptpl/app.json
+++ b/_apptpl/app.json
@@ -15,7 +15,7 @@
 			"host" : "localhost"
 		},
 		"typo3" : {
-			"path" : "../../../typo3exts/",
+			"path" : "_typo3ext",
 			"suffix" : "_core"
 		}
 	},
