Install and update packages automatically!
If the build system detects that package.json or bower.json have been changed from the last time, then it will run the relative commands (install and update).
Also, it will run an update at least once a day.

--- a/_apptpl/package.json
+++ b/_apptpl/package.json
@@ -17,7 +17,7 @@
     "grunt-tasty-swig": "julianxhokaxhiu/grunt-tasty-swig",
     "grunt-webfont": "*",
     "grunt-yui-compressor": "*",
-    "grunt-periodic": "*",
+    "grunt-periodic": "julianxhokaxhiu/grunt-periodic#when-newer",
     "grunt-exec": "*",
     "load-grunt-tasks": "*"
   }
