Fix NodeJS 0.12.x deploy task

--- a/_apptpl/package.json
+++ b/_apptpl/package.json
@@ -16,7 +16,7 @@
     "grunt-contrib-sass": "*",
     "grunt-tasty-swig": "julianxhokaxhiu/grunt-tasty-swig",
     "grunt-webfont": "*",
-    "grunt-yui-compressor": "*",
+    "grunt-yui-compressor": "julianxhokaxhiu/grunt-yui-compressor#develop",
     "grunt-periodic": "julianxhokaxhiu/grunt-periodic#when-newer",
     "grunt-exec": "*",
     "load-grunt-tasks": "*"
