--- a/_apptpl/package.json
+++ b/_apptpl/package.json
@@ -11,7 +11,7 @@
     "grunt-contrib-copy": "*",
     "grunt-contrib-watch": "*",
     "grunt-contrib-connect": "*",
-    "grunt-fontgen": "julianxhokaxhiu/grunt-fontgen#develop",
+    "grunt-fontgen": "*",
     "grunt-rsync": "*",
     "grunt-contrib-sass": "*",
     "grunt-tasty-swig": "julianxhokaxhiu/grunt-tasty-swig",
