Add support for IonIcons.

--- a/_apptpl/app.json
+++ b/_apptpl/app.json
@@ -22,6 +22,7 @@
 	"assets" : {
 		"fonts" : [
 			"bower_components/fontawesome/fonts/*",
+			"bower_components/ionicons/fonts/*",
 			"bower_components/bootstrap-sass-official/assets/fonts/bootstrap/*"
 		],
 		"js" : [
