Add NPX support

--- a/_apptpl/package.json
+++ b/_apptpl/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "dependencies": {
     "grunt": "*",
+    "grunt-cli": "*",
     "grunt-autoprefixer": "*",
     "grunt-closurecompiler": "*",
     "grunt-contrib-clean": "*",
