--- a/_apptpl/package.json
+++ b/_apptpl/package.json
@@ -3,7 +3,12 @@
   "description": "A NodeJS App that creates static HTML mockups using Grunt",
   "version": "0.0.1",
   "dependencies": {
-    "bower": "*",
+    "bootstrap": "^4.0.0-beta",
+    "font-awesome": "*",
+    "ionicons": "*",
+    "grunt-modernizr": "*",
+    "detectizr": "*",
+    "responsive-toolkit": "*",
     "grunt": "*",
     "grunt-cli": "*",
     "grunt-autoprefixer": "*",
