Re-order packages as NPM likes them

--- a/_apptpl/package.json
+++ b/_apptpl/package.json
@@ -4,29 +4,29 @@
   "version": "0.0.1",
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
-    "font-awesome": "*",
-    "ionicons": "*",
-    "grunt-modernizr": "*",
     "detectizr": "*",
-    "responsive-toolkit": "*",
+    "font-awesome": "*",
     "grunt": "*",
-    "grunt-cli": "*",
     "grunt-autoprefixer": "*",
+    "grunt-cli": "*",
     "grunt-closurecompiler": "*",
     "grunt-contrib-clean": "*",
     "grunt-contrib-concat": "*",
-    "grunt-contrib-copy": "*",
-    "grunt-contrib-watch": "*",
     "grunt-contrib-connect": "*",
+    "grunt-contrib-copy": "*",
     "grunt-contrib-imagemin": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-exec": "*",
     "grunt-fontgen": "*",
+    "grunt-modernizr": "*",
+    "grunt-periodic": "github:julianxhokaxhiu/grunt-periodic#when-newer",
     "grunt-rsync": "*",
     "grunt-sass": "*",
-    "grunt-tasty-swig": "julianxhokaxhiu/grunt-tasty-swig",
-    "grunt-webfont": "*",
-    "grunt-yui-compressor": "julianxhokaxhiu/grunt-yui-compressor#develop",
-    "grunt-periodic": "julianxhokaxhiu/grunt-periodic#when-newer",
-    "grunt-exec": "*",
-    "load-grunt-tasks": "*"
+    "grunt-tasty-swig": "github:julianxhokaxhiu/grunt-tasty-swig",
+    "grunt-webfont": "^1.7.1",
+    "grunt-yui-compressor": "github:julianxhokaxhiu/grunt-yui-compressor#develop",
+    "ionicons": "*",
+    "load-grunt-tasks": "*",
+    "responsive-toolkit": "*"
   }
 }
