Add Modernizr support

--- a/_apptpl/app.json
+++ b/_apptpl/app.json
@@ -17,6 +17,13 @@
     "typo3" : {
       "path" : "_typo3ext",
       "suffix" : "_core"
+    },
+    "modernizr": {
+      "tests": [],
+      "customTests": [],
+      "options": [
+        "setClasses"
+      ]
     }
   },
   "assets" : {
